--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "functions": {
     "api/server.js": {
-      "memory": 2048,
-      "includeFiles": "db.json"
+      "memory": 1024,
+      "includeFiles": "data.json"
     }
   },
   "rewrites": [
